--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -213,7 +213,7 @@
         app:srcCompat="@drawable/tela_inicio" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtVotandoAgora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
