--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/urna_tela_inicial" />
+        app:srcCompat="@drawable/telavotmodelo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
