--- a/app/src/main/res/layout/activity_tela_votacao.xml
+++ b/app/src/main/res/layout/activity_tela_votacao.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#FFFEF9"
     android:backgroundTint="#FFFEF9"
-    tools:context=".TelaInicial">
+    tools:context=".TelaVotacao">
 
     <ImageView
         android:id="@+id/bottom"
@@ -37,6 +37,7 @@
         android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintEnd_toEndOf="@+id/imgPadBackground"
         app:layout_constraintStart_toStartOf="@+id/imgPadBackground"
         app:layout_constraintTop_toBottomOf="@+id/btn8"
@@ -50,6 +51,7 @@
         android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintStart_toEndOf="@+id/btn8"
         app:layout_constraintTop_toBottomOf="@+id/btn6"
         app:srcCompat="@drawable/botao9" />
@@ -62,6 +64,7 @@
         android:layout_marginEnd="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintEnd_toStartOf="@+id/btn8"
         app:layout_constraintTop_toBottomOf="@+id/btn4"
         app:srcCompat="@drawable/botao7" />
@@ -74,6 +77,7 @@
         android:layout_marginEnd="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintEnd_toStartOf="@+id/btn5"
         app:layout_constraintTop_toBottomOf="@+id/btn1"
         app:srcCompat="@drawable/botao4" />
@@ -85,6 +89,7 @@
         android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintEnd_toEndOf="@+id/imgPadBackground"
         app:layout_constraintStart_toStartOf="@+id/imgPadBackground"
         app:layout_constraintTop_toBottomOf="@+id/btn2"
@@ -97,6 +102,7 @@
         android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintEnd_toEndOf="@+id/imgPadBackground"
         app:layout_constraintStart_toStartOf="@+id/imgPadBackground"
         app:layout_constraintTop_toBottomOf="@+id/btn5"
@@ -156,6 +162,7 @@
         android:layout_height="75dp"
         android:layout_marginEnd="16dp"
         android:background="#00FFFFFF"
+        android:onClick="onNumpadClick"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/btn2"
         app:layout_constraintTop_toTopOf="@+id/btn2"
@@ -167,6 +174,7 @@
         android:layout_height="75dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintBottom_toTopOf="@+id/btnReiniciar"
         app:layout_constraintEnd_toEndOf="@+id/imgPadBackground"
         app:layout_constraintStart_toStartOf="@+id/imgPadBackground"
@@ -181,6 +189,7 @@
         android:layout_marginStart="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintStart_toEndOf="@+id/btn2"
         app:layout_constraintTop_toTopOf="@+id/btn2"
         app:srcCompat="@drawable/botao3" />
@@ -193,6 +202,7 @@
         android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
         android:scaleType="centerCrop"
+        android:onClick="onNumpadClick"
         app:layout_constraintStart_toEndOf="@+id/btn5"
         app:layout_constraintTop_toBottomOf="@+id/btn3"
         app:srcCompat="@drawable/botao6" />
@@ -210,7 +220,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/tela_inicio" />
+        app:srcCompat="@drawable/tela_votacao_2" />
 
     <TextView
         android:id="@+id/txtVotandoAgora"
@@ -221,5 +231,117 @@
         android:text="VOTANDO AGORA: Votante"
         app:layout_constraintStart_toStartOf="@+id/imageView9"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtCategoria"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:textColor="#426166"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/txtNu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="NÚMERO:"
+        android:textColor="#426166"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/txtCategoria" />
+
+    <TextView
+        android:id="@+id/txtNu2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="48dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="NOME:"
+        android:textColor="#426166"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/txtNu" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="45dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="SEU VOTO PARA"
+        android:textColor="#426166"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/txtVotandoAgora" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="46dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toEndOf="@+id/txtNu"
+        app:layout_constraintTop_toBottomOf="@+id/txtCategoria"
+        app:srcCompat="@drawable/num" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="46dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/txtCategoria"
+        app:srcCompat="@drawable/num" />
+
+    <TextView
+        android:id="@+id/txtNum1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/open_sans_bold"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+    <TextView
+        android:id="@+id/txtNum2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/open_sans_bold"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+
+    <TextView
+        android:id="@+id/txtSelecionado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:textColor="#416066"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/txtNu2"
+        app:layout_constraintStart_toEndOf="@+id/txtNu2"
+        app:layout_constraintTop_toTopOf="@+id/txtNu2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
