--- a/app/src/main/res/layout/activity_tela_votacao.xml
+++ b/app/src/main/res/layout/activity_tela_votacao.xml
@@ -344,4 +344,13 @@
         app:layout_constraintStart_toEndOf="@+id/txtNu2"
         app:layout_constraintTop_toTopOf="@+id/txtNu2" />
 
+    <ImageView
+        android:id="@+id/imgPop"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView9"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:srcCompat="@drawable/pop_ind" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
